# hedge-fund

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  CUsersjomikhedge-fundgatewayroutersanalytics.py  Dockerfile  Dockerfile.agents  README.md  agent_params.yaml  brokers.yaml  docker-compose.yml  pyproject.toml  requirements.txt
agents/: base.py
backtest/: bus.py  cli.py  clock.py  db.py  metrics.py  report.py  runner.py
dashboard/: .gitignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs/: COMPLIANCE.md  COMPLIANCE_GUIDE.md  DELIVERY_SUMMARY.md  IMPROVEMENTS_GUIDE.md  LOCAL_AI_DEVELOPMENT.md  PHASE3_OPTIMIZATION.md  README.md  TESTING.md
gateway/: alerts.py  auth.py  database.py  deps.py  execution_pipeline.py  main.py  metrics.py  scheduler.py  ws_manager.py
monitoring/: prometheus.yml
scripts/: migrate_add_broker.py  migrate_hermes.py  retrain_cron.py  retrain_models.py  run_kronos_once.py  seed_prices.py  setup_backtest_db.py  setup_db.py  setup_kronos.py  start_all.py
shared/: academic_research.py  agent_base.py  agent_memory.py  agent_params.py  audit_exporter.py  backtester.py  broker_config.py  broker_failover.py  bus.py  capital_com.py  circuit_breaker.py  compliance_checker.py  config.py  correlation_hedger.py  db.py  form13f_generator.py  investor_report.py  logging.py  memory.py  model_router.py  models.py  notifications.py  order_clusterer.py  parameter_tuner.py  position_sizer.py  regime_monitor.py  regime_predictor.py  signal_combiner.py  slack_notifier.py  (+5 more)
(+287 files in other folders)
